--- a/exercises/notebooks/SV_setup_control_file.ipynb
+++ b/exercises/notebooks/SV_setup_control_file.ipynb
@@ -810,14 +810,7 @@
    "id": "48",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wel_files = [f for f in os.listdir(pf.new_d) if f.startswith(\"sv.maw_perioddata\")]\n",
-    "ismaw = True\n",
-    "if len(wel_files) == 0:\n",
-    "    wel_files = [f for f in os.listdir(pf.new_d) if f.startswith(\"sv.pwell.wel_\")]\n",
-    "    ismaw = False\n",
-    "assert len(wel_files) > 0"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -825,45 +818,7 @@
    "id": "49",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "if ismaw:\n",
-    "    for wel_file in wel_files:\n",
-    "        kper = int(wel_file.split(\".\")[1].split(\"_\")[-1]) - 1\n",
-    "        if kper == 0:\n",
-    "            continue\n",
-    "        print(wel_file)\n",
-    "        pf.add_parameters(\n",
-    "            wel_file,\n",
-    "            par_type=\"grid\",\n",
-    "            par_style=\"m\",\n",
-    "            par_name_base=\"welrate_kper:{0}\".format(kper),\n",
-    "            pargp=\"welrate_kper:{0}\".format(kper),\n",
-    "            mfile_skip=2,\n",
-    "            index_cols=[0],\n",
-    "            use_cols=[2],\n",
-    "            mfile_fmt=\"free\",\n",
-    "            upper_bound=3.0,\n",
-    "            lower_bound=0.0,\n",
-    "            transform=\"none\",\n",
-    "        )\n",
-    "else:\n",
-    "    for wel_file in wel_files:\n",
-    "        kper = int(wel_file.split(\".\")[2].split(\"_\")[-1]) - 1\n",
-    "        pf.add_parameters(\n",
-    "            wel_file,\n",
-    "            par_type=\"grid\",\n",
-    "            par_style=\"m\",\n",
-    "            par_name_base=\"welrate_kper:{0}\".format(kper),\n",
-    "            pargp=\"welrate_kper:{0}\".format(kper),\n",
-    "            mfile_skip=2,\n",
-    "            index_cols=[0, 1, 2],\n",
-    "            use_cols=[3],\n",
-    "            mfile_fmt=\"free\",\n",
-    "            upper_bound=3.0,\n",
-    "            lower_bound=0.0,\n",
-    "            transform=\"none\",\n",
-    "        )"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -887,8 +842,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "kper_min = 1000000\n",
     "for pwel_file in predwel_files:\n",
     "    kper = kper = int(pwel_file.split(\".\")[2].split(\"_\")[-1]) - 1\n",
+    "    kper_min = min(kper_min, kper)\n",
     "    pf.add_parameters(\n",
     "        pwel_file,\n",
     "        par_type=\"grid\",\n",
@@ -919,15 +876,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pf.build_pst(filename=\"pest.pst\")"
+    "wel_files = [f for f in os.listdir(pf.new_d) if f.startswith(\"sv.maw_perioddata\")]\n",
+    "ismaw = True\n",
+    "if len(wel_files) == 0:\n",
+    "    wel_files = [f for f in os.listdir(pf.new_d) if f.startswith(\"sv.pwell.wel_\")]\n",
+    "    ismaw = False\n",
+    "assert len(wel_files) > 0"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "54",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Check the `obsval` quantities in the \"* observation data\" section - what are those numbers:"
+    "if ismaw:\n",
+    "    for wel_file in wel_files:\n",
+    "        kper = int(wel_file.split(\".\")[1].split(\"_\")[-1]) - 1\n",
+    "        if kper < kper_min:\n",
+    "            continue\n",
+    "        if kper == 0:\n",
+    "            continue\n",
+    "        print(wel_file)\n",
+    "        pf.add_parameters(\n",
+    "            wel_file,\n",
+    "            par_type=\"grid\",\n",
+    "            par_style=\"m\",\n",
+    "            par_name_base=\"welrate_kper:{0}\".format(kper),\n",
+    "            pargp=\"welrate_kper:{0}\".format(kper),\n",
+    "            mfile_skip=2,\n",
+    "            index_cols=[0],\n",
+    "            use_cols=[2],\n",
+    "            mfile_fmt=\"free\",\n",
+    "            upper_bound=3.0,\n",
+    "            lower_bound=0.0,\n",
+    "            transform=\"none\",\n",
+    "        )\n",
+    "else:\n",
+    "    for wel_file in wel_files:\n",
+    "        kper = int(wel_file.split(\".\")[2].split(\"_\")[-1]) - 1\n",
+    "        if kper < kper_min:\n",
+    "            continue\n",
+    "        pf.add_parameters(\n",
+    "            wel_file,\n",
+    "            par_type=\"grid\",\n",
+    "            par_style=\"m\",\n",
+    "            par_name_base=\"welrate_kper:{0}\".format(kper),\n",
+    "            pargp=\"welrate_kper:{0}\".format(kper),\n",
+    "            mfile_skip=2,\n",
+    "            index_cols=[0, 1, 2],\n",
+    "            use_cols=[3],\n",
+    "            mfile_fmt=\"free\",\n",
+    "            upper_bound=3.0,\n",
+    "            lower_bound=0.0,\n",
+    "            transform=\"none\",\n",
+    "        )"
    ]
   },
   {
@@ -937,13 +941,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pf.build_pst(filename=\"pest.pst\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56",
+   "metadata": {},
+   "source": [
+    "Check the `obsval` quantities in the \"* observation data\" section - what are those numbers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "obs = pf.pst.observation_data\n",
     "obs.obsval"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "56",
+   "id": "58",
    "metadata": {},
    "source": [
     "So if the `obsval` values are all the existing model output values, then if we run the model again just the same way, we should have a phi of zero - a great check!. Let's do that:"
@@ -952,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +1006,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "60",
+   "id": "62",
    "metadata": {},
    "source": [
     "assert pst.phi < 1.e7"
@@ -992,7 +1014,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61",
+   "id": "63",
    "metadata": {},
    "source": [
     "now we need to \"fix\" the pumping well pars - those are for later when we do optimization"
@@ -1001,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63",
+   "id": "65",
    "metadata": {},
    "source": [
     "Now generate a Prior parameter ensemble (which the parameter bound and geostat info we passed to `PstFrom` above)"
@@ -1023,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1054,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65",
+   "id": "67",
    "metadata": {},
    "source": [
     "We need to enforce parameter bounds on those realizations, save it and add an arg to the control file to tell ies to use it:"
@@ -1041,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1077,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67",
+   "id": "69",
    "metadata": {},
    "source": [
     "Run the first realization in the ensemble:"
@@ -1064,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1077,14 +1099,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "70",
+   "id": "72",
    "metadata": {},
    "source": [
     "Extra:  run a small prior monte carlo:"
@@ -1093,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": []
