--- a/exercises/notebooks/SV_advanced.ipynb
+++ b/exercises/notebooks/SV_advanced.ipynb
@@ -497,13 +497,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gwf.remove_package(\"pwell\")"
+    "maw_spd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gwf.remove_package(\"pwell\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38",
+   "id": "39",
    "metadata": {},
    "source": [
     "## Convert RIV package to SFR package"
@@ -529,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47",
+   "id": "48",
    "metadata": {},
    "source": [
     "## Convert high-K lake to LAK package"
@@ -680,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +891,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63",
+   "id": "64",
    "metadata": {},
    "source": [
     "## Add Mover"
@@ -890,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,20 +939,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66",
+   "id": "67",
    "metadata": {},
    "source": [
     "## Write and run simulation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gwf.set_all_data_external(external_data_folder=\"external\")"
    ]
   },
   {
@@ -952,7 +952,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim.write_simulation()"
+    "gwf.set_all_data_external(external_data_folder=\"external\")"
    ]
   },
   {
@@ -962,12 +962,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sim.write_simulation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sim.run_simulation()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "70",
+   "id": "71",
    "metadata": {},
    "source": [
     "## Plot the results\n",
@@ -978,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74",
+   "id": "75",
    "metadata": {},
    "source": [
     "### Simulated Heads and Drawdown"
@@ -1041,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1079,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77",
+   "id": "78",
    "metadata": {},
    "source": [
     "#### Calibration"
@@ -1078,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,7 +1122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1170,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,7 +1190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88",
+   "id": "89",
    "metadata": {},
    "source": [
     "##### Calculate the residuals"
@@ -1214,7 +1224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1278,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1288,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1333,7 +1343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1344,7 +1354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99",
+   "id": "100",
    "metadata": {},
    "source": [
     "##### Plot the residuals"
@@ -1353,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,7 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1376,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1408,7 +1418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1419,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1429,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
+   "id": "108",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1479,7 +1489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "108",
+   "id": "109",
    "metadata": {},
    "source": [
     "**NOTE:** There is spatial bias in the simulated results (*i.e.*, residuals are positive in the Northeast and negative in the Southwest)."
@@ -1487,7 +1497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "109",
+   "id": "110",
    "metadata": {},
    "source": [
     "#### First 10 year transient period"
@@ -1496,7 +1506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1507,7 +1517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "112",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1551,7 +1561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113",
+   "id": "114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1561,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1571,7 +1581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "115",
+   "id": "116",
    "metadata": {},
    "source": [
     "#### Second 10 year transient period"
@@ -1580,7 +1590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116",
+   "id": "117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1590,7 +1600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117",
+   "id": "118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1611,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118",
+   "id": "119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1634,7 +1644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119",
+   "id": "120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1644,7 +1654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120",
+   "id": "121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1654,7 +1664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "121",
+   "id": "122",
    "metadata": {},
    "source": [
     "### Streamflow results"
@@ -1663,7 +1673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122",
+   "id": "123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1682,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "123",
+   "id": "124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1707,7 +1717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "124",
+   "id": "125",
    "metadata": {},
    "source": [
     "### Lake stage"
@@ -1716,7 +1726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125",
+   "id": "126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "126",
+   "id": "127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,7 +1749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "127",
+   "id": "128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1750,7 +1760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "128",
+   "id": "129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1760,7 +1770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "129",
+   "id": "130",
    "metadata": {},
    "outputs": [],
    "source": [
