update storage and move base synthetic valley notebook

--- a/exercises/synthetic-valley/SV_process_temporal_data.ipynb
+++ b/exercises/synthetic-valley/SV_process_temporal_data.ipynb
@@ -560,7 +560,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tampa25modflowpest",
+   "display_name": "tampa26mf6pp",
    "language": "python",
    "name": "python3"
   },
