--- a/exercises/synthetic-valley/structured/SV_flopy.ipynb
+++ b/exercises/synthetic-valley/structured/SV_flopy.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_frequency = \"monthly\"  # monthly or annual\n",
+    "sample_frequency = \"annual\"  # monthly or annual\n",
     "useET = True"
    ]
   },
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = pl.Path(f\"data/temporal_data_{sample_frequency}.parquet\")\n",
+    "path = pl.Path(f\"../data/temporal_data_{sample_frequency}.parquet\")\n",
     "temporal_df = pd.read_parquet(path)"
    ]
   },
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nc_path = pl.Path(\"../synthetic-valley/data/synthetic_valley_truth.nc\")\n",
+    "nc_path = pl.Path(\"../data/synthetic_valley_truth.nc\")\n",
     "nc_ds = xa.open_dataset(nc_path)\n",
     "lake_location = nc_ds[\"lake_location\"].to_numpy()"
    ]
@@ -176,7 +176,7 @@
    "outputs": [],
    "source": [
     "name = \"sv\"\n",
-    "ws = pl.Path(f\"../models/synthetic-valley-base-{sample_frequency}\")"
+    "ws = pl.Path(f\"../../models/synthetic-valley-base-{sample_frequency}\")"
    ]
   },
   {
@@ -467,10 +467,19 @@
    "outputs": [],
    "source": [
     "ss = [5e-5, 5e-5, 5e-3, 5e-5, 5e-5]\n",
+    "v = np.full(shape2d, 5e-5, dtype=float)\n",
+    "v[clay_location == 1] = 5e-3\n",
+    "ss[2] = v\n",
+    "\n",
+    "\n",
     "sy = [0.25, 0.25, 0.025, 0.25, 0.25]\n",
     "v = np.full(shape2d, 0.25, dtype=float)\n",
     "v[lake_location == 1] = 1.0\n",
-    "sy[0] = v"
+    "sy[0] = v\n",
+    "\n",
+    "v = np.full(shape2d, 0.25, dtype=float)\n",
+    "v[clay_location == 1] = 0.45\n",
+    "sy[2] = v"
    ]
   },
   {
@@ -807,7 +816,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs_path = pl.Path(\"data\")\n",
+    "obs_path = pl.Path(\"../data\")\n",
     "combined_data = [obs_rc_locs, well_depth, aq_layer]\n",
     "with open(obs_path / \"obs_data.pkl\", \"wb\") as f:\n",
     "    pickle.dump(combined_data, f)"
@@ -1812,6 +1821,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "lak_df[\"LAKE-STAGE\"].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "140",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with flopy.plot.styles.USGSPlot():\n",
     "    fig, ax = plt.subplots(1, 1, figsize=(9, 1.5))\n",
     "\n",
@@ -1824,23 +1843,31 @@
     "    ax.axhline(0, lw=0.5, color=\"black\")\n",
     "    ax.set_ylabel(\"Lake\\nStage, ft\")\n",
     "    ax.set_xlabel(\"Stress Period\")\n",
-    "    ax.set_ylim(0, 14)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "140",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ws = pl.Path(f\"../models/synthetic-valley-working-{sample_frequency}\")"
+    "    ax.set_ylim(-5, 14)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "141",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "142",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ws = pl.Path(f\"../../models/synthetic-valley-working-{sample_frequency}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "143",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1891,7 +1918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "142",
+   "id": "144",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1902,7 +1929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "143",
+   "id": "145",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1910,7 +1937,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "tampa26mf6pp",
    "language": "python",
    "name": "python3"
   },
