more work on words

--- a/exercises/notebooks/SV_run_ies.ipynb
+++ b/exercises/notebooks/SV_run_ies.ipynb
@@ -1,18 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "import os\n",
-    "import shutil\n",
-    "import pyemu\n",
-    "import matplotlib.pyplot as plt\n",
-    "import helpers"
+    "# Run a PESTPP-IES experiment"
    ]
   },
   {
@@ -22,8 +15,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "working_d = \"model_and_pest_files\"\n",
-    "assert os.path.exists(working_d)"
+    "%matplotlib inline\n",
+    "import os\n",
+    "import shutil\n",
+    "import numpy as np\n",
+    "import pyemu\n",
+    "import matplotlib.pyplot as plt\n",
+    "import helpers"
    ]
   },
   {
@@ -33,9 +31,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pst = pyemu.Pst(os.path.join(working_d, \"pest.pst\"))\n",
-    "assert pst.nobs > pst.nnz_obs\n",
-    "assert pst.nnz_obs > 0"
+    "# the existing dataset\n",
+    "org_working_d = \"model_and_pest_files\"\n",
+    "# the new dataset for this experiment\n",
+    "working_d = \"model_and_pest_file_exp1\"\n",
+    "# the master ies dir that will be created\n",
+    "master_dir = \"master_ies_advanced\""
    ]
   },
   {
@@ -45,8 +46,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pst.control_data.noptmax = -1\n",
-    "pst.pestpp_options[\"ies_num_reals\"] = 30\n",
+    "assert os.path.exists(org_working_d)\n",
+    "if os.path.exists(working_d):\n",
+    "    shutil.rmtree(working_d)\n",
+    "shutil.copytree(org_working_d, working_d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4",
+   "metadata": {},
+   "source": [
+    "load the control file and check that it has had weights set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pst = pyemu.Pst(os.path.join(working_d, \"pest.pst\"))\n",
+    "assert pst.nobs > pst.nnz_obs\n",
+    "assert pst.nnz_obs > 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6",
+   "metadata": {},
+   "source": [
+    "Modify any ies settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pst.control_data.noptmax = 5\n",
+    "pst.pestpp_options[\"ies_num_reals\"] = 100\n",
     "pst.pestpp_options[\"ies_bad_phi_sigma\"] = 1.75\n",
     "# pst.pestpp_options[\"ies_n_iter_reinflate\"] = [2, 999]\n",
     "# pst.pestpp_options[\"ies_reinflate_num_reals\"] = [50, -50]\n",
@@ -60,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,19 +110,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5",
+   "cell_type": "markdown",
+   "id": "9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "master_dir = \"master_ies_advanced\""
+    "run PESTPP-IES"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,19 +138,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
+   "cell_type": "markdown",
+   "id": "11",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "noptmax = None"
+    "Process and plot the results.  Choose the iteration to use as the \"posterior\"; if `noptmax` is `None`, the final iteration is used"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noptmax = 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13",
+   "metadata": {},
+   "source": [
+    "This creates a multi-page pdf in the master dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,9 +174,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "15",
+   "metadata": {},
+   "source": [
+    "Plot some property realizations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,9 +209,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "18",
+   "metadata": {},
+   "source": [
+    "Plot the prior and posterior forecast histograms:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,9 +227,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20",
+   "metadata": {},
+   "source": [
+    "Explore other ies results via the `Pst.ies` handler:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,9 +245,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "22",
+   "metadata": {},
+   "source": [
+    "Plot the `actual` and `meas`ured phi sequence across iterations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pm, pa = pst.ies.phiactual, pst.ies.phimeas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(2, 1, figsize=(10, 10))\n",
+    "vals = np.log10(pm.iloc[:, 6:].values)\n",
+    "ivals = pm.iteration.values\n",
+    "_ = [axes[0].plot(ivals, vals[:, i], \"0.5\") for i in range(vals.shape[1])]\n",
+    "vals = np.log10(pa.iloc[:, 6:].values)\n",
+    "ivals = pa.iteration.values\n",
+    "_ = [axes[1].plot(ivals, vals[:, i], \"0.5\") for i in range(vals.shape[1])]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25",
+   "metadata": {},
+   "source": [
+    "Visualize the parameter change summary across iterations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,14 +304,15 @@
     "    ubnd.sort_values(inplace=False, ascending=False).iloc[:10].plot(\n",
     "        kind=\"bar\", ax=axes[1]\n",
     "    )\n",
-    "    axes[0].set_title(\"iteration {0}\".format(i))\n",
+    "    axes[0].set_title(\"iteration {0} lower bound\".format(i))\n",
+    "    axes[1].set_title(\"iteration {0} upper bound\".format(i))\n",
     "    plt.tight_layout()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -197,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -205,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": []
