--- a/exercises/notebooks/SV_advanced.ipynb
+++ b/exercises/notebooks/SV_advanced.ipynb
@@ -33,14 +33,14 @@
     "name = \"sv\"\n",
     "\n",
     "# prep the working model...\n",
-    "sample_frequency = \"annual\"  # monthly or annual\n",
-    "base_ws = pl.Path(f\"../models/synthetic-valley-working-{sample_frequency}\")\n",
-    "advanced_ws = base_ws.parent / f\"synthetic-valley-working-advanced-{sample_frequency}\"\n",
+    "# sample_frequency = \"annual\"  # monthly or annual\n",
+    "# base_ws = pl.Path(f\"../models/synthetic-valley-working-{sample_frequency}\")\n",
+    "# advanced_ws = base_ws.parent / f\"synthetic-valley-working-advanced-{sample_frequency}\"\n",
     "\n",
     "# or gen the truth model\n",
-    "# sample_frequency = \"monthly\"  # monthly or annual\n",
-    "# base_ws = pl.Path(f\"../models/synthetic-valley-base-{sample_frequency}\")\n",
-    "# advanced_ws = base_ws.parent / f\"synthetic-valley-truth-advanced-{sample_frequency}\""
+    "sample_frequency = \"monthly\"  # monthly or annual\n",
+    "base_ws = pl.Path(f\"../models/synthetic-valley-base-{sample_frequency}\")\n",
+    "advanced_ws = base_ws.parent / f\"synthetic-valley-truth-advanced-{sample_frequency}\""
    ]
   },
   {
@@ -497,23 +497,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "maw_spd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "gwf.remove_package(\"pwell\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39",
+   "id": "38",
    "metadata": {},
    "source": [
     "## Convert RIV package to SFR package"
@@ -539,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48",
+   "id": "47",
    "metadata": {},
    "source": [
     "## Convert high-K lake to LAK package"
@@ -690,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,13 +700,21 @@
     "k11[0] = k11[1]\n",
     "k33[0] = k33[1]\n",
     "gwf.npf.k = k11\n",
-    "gwf.npf.k33 = k33"
+    "gwf.npf.k33 = k33\n",
+    "ss = gwf.sto.ss.array\n",
+    "ss[0] = ss[1]\n",
+    "sy = gwf.sto.sy.array\n",
+    "symask = sy.copy()\n",
+    "symask[symask == 1.0] = np.nan\n",
+    "sy[sy == 1.0] = np.nanmean(symask)\n",
+    "gwf.sto.ss = ss\n",
+    "gwf.sto.sy = sy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64",
+   "id": "63",
    "metadata": {},
    "source": [
     "## Add Mover"
@@ -900,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67",
+   "id": "66",
    "metadata": {},
    "source": [
     "## Write and run simulation"
@@ -948,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +975,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71",
+   "id": "70",
    "metadata": {},
    "source": [
     "## Plot the results\n",
@@ -988,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1040,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75",
+   "id": "74",
    "metadata": {},
    "source": [
     "### Simulated Heads and Drawdown"
@@ -1051,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1077,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78",
+   "id": "77",
    "metadata": {},
    "source": [
     "#### Calibration"
@@ -1088,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1169,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,7 +1178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1190,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1215,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89",
+   "id": "88",
    "metadata": {},
    "source": [
     "##### Calculate the residuals"
@@ -1224,7 +1222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1239,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,7 +1265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1288,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,7 +1307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,7 +1317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1343,7 +1341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,7 +1352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "100",
+   "id": "99",
    "metadata": {},
    "source": [
     "##### Plot the residuals"
@@ -1363,7 +1361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1376,7 +1374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1396,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1407,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1418,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1429,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
+   "id": "106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108",
+   "id": "107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1489,7 +1487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "109",
+   "id": "108",
    "metadata": {},
    "source": [
     "**NOTE:** There is spatial bias in the simulated results (*i.e.*, residuals are positive in the Northeast and negative in the Southwest)."
@@ -1497,7 +1495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "110",
+   "id": "109",
    "metadata": {},
    "source": [
     "#### First 10 year transient period"
@@ -1506,7 +1504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1517,7 +1515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1530,6 +1528,29 @@
     "        ax = axs[idx]\n",
     "        mm = flopy.plot.PlotMapView(model=gwf, layer=idx, ax=ax)\n",
     "        mm.plot_array(hds)\n",
+    "        cs = mm.contour_array(hds, colors=\"white\", levels=levels)\n",
+    "        plt.clabel(cs, inline=True, fontsize=8)\n",
+    "        ax.set_title(f\"Layer {idx + 1}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "112",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with flopy.plot.styles.USGSMap():\n",
+    "    fig, axs = plt.subplots(1, 5, figsize=(9, 3), sharey=True)\n",
+    "    fig.suptitle(\"DTW - Transient Period 1\")\n",
+    "    hds = get_heads(totim1)\n",
+    "    flooded = gwf.dis.top.array - hds\n",
+    "    flooded[flooded > 0] = np.nan\n",
+    "    for idx in range(nlay):\n",
+    "        ax = axs[idx]\n",
+    "        mm = flopy.plot.PlotMapView(model=gwf, layer=idx, ax=ax)\n",
+    "        mm.plot_array(hds)\n",
+    "        mm.plot_array(flooded, cmap=\"jet\")\n",
     "        cs = mm.contour_array(hds, colors=\"white\", levels=levels)\n",
     "        plt.clabel(cs, inline=True, fontsize=8)\n",
     "        ax.set_title(f\"Layer {idx + 1}\")"
@@ -1608,11 +1629,14 @@
     "    fig, axs = plt.subplots(1, 5, figsize=(9, 3), sharey=True)\n",
     "    fig.suptitle(\"Heads - Transient Period 2 - Prediction\")\n",
     "    hds = get_heads(totim2)\n",
-    "\n",
+    "    flooded = gwf.dis.top.array - hds\n",
+    "    flooded[flooded > 0] = np.nan\n",
     "    for idx in range(nlay):\n",
     "        ax = axs[idx]\n",
     "        mm = flopy.plot.PlotMapView(model=gwf, layer=idx, ax=ax)\n",
     "        mm.plot_array(hds)\n",
+    "        mm.plot_array(flooded, cmap=\"jet\")\n",
+    "\n",
     "        cs = mm.contour_array(hds, colors=\"white\", levels=levels)\n",
     "        plt.clabel(cs, inline=True, fontsize=8)\n",
     "        ax.set_title(f\"Layer {idx + 1}\")"
