--- a/exercises/notebooks/SV_run_ies.ipynb
+++ b/exercises/notebooks/SV_run_ies.ipynb
@@ -36,7 +36,7 @@
     "# the new dataset for this experiment\n",
     "working_d = \"model_and_pest_file_exp1\"\n",
     "# the master ies dir that will be created\n",
-    "master_dir = \"master_ies_advanced\""
+    "master_dir = \"master_ies_advanced_noforeunc\""
    ]
   },
   {
@@ -223,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "helpers.plot_ies_forecasts(master_dir, noptmax=noptmax)"
+    "helpers.plot_ies_forecasts(master_dir, noptmax=noptmax, include_t=True)"
    ]
   },
   {
