--- a/exercises/notebooks/SV_setup_control_file.ipynb
+++ b/exercises/notebooks/SV_setup_control_file.ipynb
@@ -36,8 +36,8 @@
     "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working_advanced-monthly\")\n",
     "\n",
     "\n",
-    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-annual\")\n",
-    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-advanced-annual\")\n",
+    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-annual\")\n",
+    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-advanced-annual\")\n",
     "assert os.path.exists(safe_org_d)"
    ]
   },
@@ -721,7 +721,7 @@
     "    geostruct=pp_geostruct_sy,\n",
     "    par_name_base=\"sy-pp-wt\",\n",
     "    pargp=\"sy-pp-wt\",\n",
-    "    ult_ubound=0.3,\n",
+    "    ult_ubound=1.0,\n",
     "    transform=\"none\",\n",
     ")\n",
     "df = pf.add_parameters(\n",
@@ -744,9 +744,7 @@
    "cell_type": "markdown",
    "id": "45",
    "metadata": {},
-   "source": [
-    "Add some recharge parameters for the base model - this is to try to account for the uncertainty that has been introduced through simplification..."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -754,47 +752,7 @@
    "id": "46",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "rech_files = [\n",
-    "    f for f in os.listdir(pf.new_d) if f.startswith(\"sv.rch_stress_period_data_\")\n",
-    "]\n",
-    "if len(rech_files) == 0:\n",
-    "    uzf_pak_file = \"sv.uzf_packagedata.txt\"\n",
-    "    if os.path.exists(os.path.join(pf.new_d, uzf_pak_file)):\n",
-    "        pass\n",
-    "    else:\n",
-    "        raise Exception(\"didnt find any rech files or uzg package data file\")\n",
-    "\n",
-    "else:\n",
-    "    assert len(rech_files) == sim.tdis.nper.data\n",
-    "    rech_files.sort()\n",
-    "    df = pf.add_parameters(\n",
-    "        rech_files,\n",
-    "        par_type=\"constant\",\n",
-    "        lower_bound=0.7,\n",
-    "        upper_bound=1.3,\n",
-    "        par_name_base=\"rech-cn\",\n",
-    "        pargp=\"rech-cn\",\n",
-    "        transform=None,\n",
-    "        index_cols=[0, 1, 2],\n",
-    "        use_cols=[3],\n",
-    "        mfile_skip=0,\n",
-    "    )\n",
-    "    for rech_file in rech_files:\n",
-    "        kper = int(rech_file.split(\".\")[1].split(\"_\")[-1]) - 1\n",
-    "        df = pf.add_parameters(\n",
-    "            rech_file,\n",
-    "            par_type=\"constant\",\n",
-    "            lower_bound=0.7,\n",
-    "            upper_bound=1.3,\n",
-    "            par_name_base=\"rech-tcn_kper:{0}\".format(kper),\n",
-    "            pargp=\"rech-tcn_kper:{0}\".format(kper),\n",
-    "            transform=None,\n",
-    "            index_cols=[0, 1, 2],\n",
-    "            use_cols=[3],\n",
-    "            mfile_skip=0,\n",
-    "        )"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -810,22 +768,6 @@
    "id": "48",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "predwel_files = [\n",
     "    f\n",
@@ -836,16 +778,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49",
+   "metadata": {},
+   "source": [
+    "Since the prediction well only has information for the predictive period, we can use its stress period/kper information to for other packages:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "kper_min = 1000000\n",
+    "kper_start_pred = 1000000\n",
     "for pwel_file in predwel_files:\n",
     "    kper = kper = int(pwel_file.split(\".\")[2].split(\"_\")[-1]) - 1\n",
-    "    kper_min = min(kper_min, kper)\n",
+    "    kper_min = min(kper_start_pred, kper)\n",
     "    pf.add_parameters(\n",
     "        pwel_file,\n",
     "        par_type=\"grid\",\n",
@@ -863,16 +813,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52",
+   "id": "51",
    "metadata": {},
    "source": [
-    "Now build the interface and the control file:"
+    "Now find any remaining wel/maw files:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,6 +835,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53",
+   "metadata": {},
+   "source": [
+    "And add parameters for them:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "54",
@@ -894,7 +852,7 @@
     "if ismaw:\n",
     "    for wel_file in wel_files:\n",
     "        kper = int(wel_file.split(\".\")[1].split(\"_\")[-1]) - 1\n",
-    "        if kper < kper_min:\n",
+    "        if kper < kper_start_pred:\n",
     "            continue\n",
     "        if kper == 0:\n",
     "            continue\n",
@@ -916,7 +874,7 @@
     "else:\n",
     "    for wel_file in wel_files:\n",
     "        kper = int(wel_file.split(\".\")[2].split(\"_\")[-1]) - 1\n",
-    "        if kper < kper_min:\n",
+    "        if kper < kper_start_pred:\n",
     "            continue\n",
     "        pf.add_parameters(\n",
     "            wel_file,\n",
@@ -935,9 +893,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "55",
+   "metadata": {},
+   "source": [
+    "Add some recharge parameters for the base model - this is to try to account for the uncertainty that has been introduced through simplification...if we are using uzf, then add some small uncertainties for precip/infilt:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rech_files = [\n",
+    "    f for f in os.listdir(pf.new_d) if f.startswith(\"sv.rch_stress_period_data_\")\n",
+    "]\n",
+    "if len(rech_files) == 0:\n",
+    "    uzf_pak_file = \"sv.uzf_packagedata.txt\"\n",
+    "    if os.path.exists(os.path.join(pf.new_d, uzf_pak_file)):\n",
+    "        uzf_files = [f for f in os.listdir(pf.new_d) if f.startswith(\"sv.uzf_period\")]\n",
+    "        uzf_files.sort()\n",
+    "        print(uzf_files)\n",
+    "        assert len(uzf_files) == sim.tdis.nper.data\n",
+    "        for uzf_file in uzf_files:\n",
+    "            kper = int(uzf_file.split(\".\")[1].split(\"_\")[-1]) - 1\n",
+    "            if kper >= kper_start_pred:  # dont add forecast parameters\n",
+    "                continue\n",
+    "            df = pf.add_parameters(\n",
+    "                uzf_file,\n",
+    "                par_type=\"constant\",\n",
+    "                lower_bound=0.8,\n",
+    "                upper_bound=1.2,\n",
+    "                par_name_base=\"uzf-tcn_kper:{0}\".format(kper),\n",
+    "                pargp=\"uzf-tcn_kper:{0}\".format(kper),\n",
+    "                transform=None,\n",
+    "                index_cols=[0],\n",
+    "                use_cols=[1],\n",
+    "                mfile_skip=0,\n",
+    "            )\n",
+    "    else:\n",
+    "        raise Exception(\"didnt find any rech files or uzg package data file\")\n",
+    "\n",
+    "else:\n",
+    "    assert len(rech_files) == sim.tdis.nper.data\n",
+    "    rech_files.sort()\n",
+    "    for rech_file in rech_files:\n",
+    "        kper = int(rech_file.split(\".\")[1].split(\"_\")[-1]) - 1\n",
+    "        if kper >= kper_start_pred:  # dont add forecast parameters\n",
+    "            continue\n",
+    "        df = pf.add_parameters(\n",
+    "            rech_file,\n",
+    "            par_type=\"constant\",\n",
+    "            lower_bound=0.6,\n",
+    "            upper_bound=1.4,\n",
+    "            par_name_base=\"rech-tcn_kper:{0}\".format(kper),\n",
+    "            pargp=\"rech-tcn_kper:{0}\".format(kper),\n",
+    "            transform=None,\n",
+    "            index_cols=[0, 1, 2],\n",
+    "            use_cols=[3],\n",
+    "            mfile_skip=0,\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57",
+   "metadata": {},
+   "source": [
+    "Now build the interface and the control file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +977,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56",
+   "id": "59",
    "metadata": {},
    "source": [
     "Check the `obsval` quantities in the \"* observation data\" section - what are those numbers:"
@@ -955,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +996,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58",
+   "id": "61",
    "metadata": {},
    "source": [
     "So if the `obsval` values are all the existing model output values, then if we run the model again just the same way, we should have a phi of zero - a great check!. Let's do that:"
@@ -974,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,8 +1036,8 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "62",
+   "cell_type": "markdown",
+   "id": "65",
    "metadata": {},
    "source": [
     "assert pst.phi < 1.e7"
@@ -1014,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63",
+   "id": "66",
    "metadata": {},
    "source": [
     "now we need to \"fix\" the pumping well pars - those are for later when we do optimization"
@@ -1023,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1067,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65",
+   "id": "68",
    "metadata": {},
    "source": [
     "Now generate a Prior parameter ensemble (which the parameter bound and geostat info we passed to `PstFrom` above)"
@@ -1045,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67",
+   "id": "70",
    "metadata": {},
    "source": [
     "We need to enforce parameter bounds on those realizations, save it and add an arg to the control file to tell ies to use it:"
@@ -1063,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1077,7 +1108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69",
+   "id": "72",
    "metadata": {},
    "source": [
     "Run the first realization in the ensemble:"
@@ -1086,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,14 +1130,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "72",
+   "id": "75",
    "metadata": {},
    "source": [
     "Extra:  run a small prior monte carlo:"
@@ -1115,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": []
