--- a/exercises/notebooks/SV_obsvals_weights_noise.ipynb
+++ b/exercises/notebooks/SV_obsvals_weights_noise.ipynb
@@ -363,12 +363,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.random.seed(pyemu.en.SEED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "noise = pyemu.helpers.autocorrelated_draw(pst, struct_dict, num_reals=1000)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "source": [
     "We know from expert knowledge that the vertical head differences are never negative between the water table and aquifer, so let's repair any noise realizations that have that condition"
@@ -377,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "source": [
     "Save the noise ensemble, tell ies about it, and an noptmax=-2 test run:"
@@ -400,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33",
+   "id": "34",
    "metadata": {},
    "source": [
     "As you can see from the phi group summary, we need some rebalanced weights.  One way to do this is the the ies_phi_factor_file:"
@@ -423,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": []
